# VKEducation_algorithms_and_data_structures

./: README.md
HW_1/: CMakeLists.txt  README.md  src.cpp  test.cpp
HW_2/: README.md  src.cpp  test.cpp
HW_3/: README.md  src.cpp  test.cpp
HW_4/: CMakeLists.txt  README.md  src.cpp  test.cpp
HW_5/: README.md  src.cpp  test.cpp
HW_6/: README.md  src.cpp  test.cpp
HW_7/: README.md  src.cpp  test.cpp
HW_8/: README.md  src.cpp  test.cpp
